traces/bug_385.txt
src/bamglib/Metric.cpp:571: error: DEAD_STORE
  The value written to &llf (type double) is never used.
Showing all 1 steps of the trace


src/bamglib/Metric.cpp:571:27: Write of unused value
569.   			//     << " = " << lA+lB+lC << " " <<  V << " == " << A*lA+B*lB+C*lC << endl;
570.   			
571.   			lla = lA,llb=lB,llc=lC,llf=ss[iV*n] ;
                                 ^
572.   
573.   			bb[j]     =  ss[iV*n] - ( sA*lA + sB*lB + sC*lC ) ;
